# bc-multiplike

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: utils.py
app/application/repositories/: CompanyRepository.py
app/application/usecase/: CreateCompany.py  GetCompany.py  ListCompanies.py  create_company.py  delete_company.py  list_companies.py  retrieve_company.py  update_company.py
app/controller/: CompanyController.py  company.py
app/domain/entities/: company.py
app/domain/entity/: company.py
app/domain/repositories/: CompanyRepository.py  company.py
app/domain/schemas/: company.py
app/infra/: api.py  exceptions.py  fastapi.py  sqlalchemy.py
app/infra/repositories/: CompanyRepository.py  company.py
