[tool.poetry]
name = "multiplike-backend"
version = "0.1.0"
description = ""
authors = ["Luis Guerreiro <luiscvlh11@gmail.com>"]
readme = "README.md"
packages = [{include = "multiplike_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
sqlalchemy = "^2.0.21"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
