[tool.poetry]
name = "bc-multiplike"
version = "0.1.0"
description = ""
authors = ["Luis Guerreiro <luiscvlh11@gmail.com>"]
readme = "README.md"
packages = [{include = "multiplike_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
